[project]
name = "urlblob"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.11.4",
    "rich>=14.0.0",
    "typer>=0.15.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython>=9.2.0",
]

[project.scripts]
urlblob = "urlblob.main:main"
