[project]
name = "urlblob"
version = "0.1.0"
description = "Agnostic access for presigned URLs at different cloud providers"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"

authors = [
  { name = "Maren van Otterdijk", email = "maren@scidonia.ai" }
]
maintainers = [
  { name = "Scidonia Limited", email = "team@scidonia.com" }
]
keywords = [
  "presigned urls",
  "signed urls",
  "s3",
  "azure",
  "gcs",
  "blob storage",
  "object storage",
  "cloud storage",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
  "Topic :: Internet",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Utilities"
]

dependencies = ["httpx[http2]>=0.28.1", "pydantic>=2.11.4"]

[project.optional-dependencies]
cli = ["typer>=0.15.4", "rich>=14.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
urlblob = "urlblob.main:main"

[tool.hatch.build]
include = ["pyproject.toml", "urlblob", "README.md", "LICENSE"]
